// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly 1`] = `
.emotion-0 {
  color: #fff;
  background-color: #0cd664;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
}

<span
  className="emotion-0"
>
  Active
</span>
`;

exports[`Badge renders correctly with background color 1`] = `
.emotion-0 {
  color: #fff;
  background-color: red;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
}

<span
  className="emotion-0"
>
  Red background banner
</span>
`;

exports[`Badge renders correctly with color 1`] = `
.emotion-0 {
  color: red;
  background-color: #0cd664;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
}

<span
  className="emotion-0"
>
  Red banner
</span>
`;
